# HP8970-Companion

./: COPYRIGHT  README  README.md  VERSION  configure.ac
data/: Makefile.am
data/applications/: hp8970.desktop
data/gsettings/: us.heterodyne.hp8970.gschema.xml
help/: Makefile.am
help/C/: ExternalMixer.page  GPIB.page  LO.page  hp8970.page  index.page  legal.xml  measurements.page  options.page  overview.page  plot.page  save.page  source.page  special.page  title+notes.page
include/: GPIBcomms.h  GTKcallbacks.h  HP8970.h  HP8970comms.h  messageEvent.h  modeSVGdiagrams.h  widgetID.h
src/: CairoPlot.c  GPIBcommsThread.c  GTKmainDialog.c  GTKpageExtLO.c  GTKpageGPIB.c  GTKpageNoiseSource.c  GTKpageNotes.c  GTKpageOptions.c  GTKpagePlot.c  GTKpageSpecialFns.c  HP8970-GTK4.c  HP8970-GTK4.xml  HP8970.c  HP8970comms.c  HP8970sweep.c  HPlogo.c  JSON-save+restore.c  Makefile.am  PDF+SVG+PNGwidgetCallback.c  catalogWidgets.c  g_settings-save+restore.c  glibSettings.c  hp8970.cmb  hp8970.cmb.db  hp8970.css  hp8970.ui  messageEvent.c  printWidgetCallback.c  save+restore.c  us.heterodyne.hp8970.gschema.xml  utility.c
