@YELP_HELP_RULES@
HELP_ID = hp8970
HELP_FILES = index.page GPIB.page LO.page overview.page source.page hp8970.page legal.xml measurements.page options.page plot.page title+notes.page

HELP_MEDIA = media/title.png media/HP8970.png media/sweep.png media/extLOpage.png media/save.png media/GPIBpage.png media/plotPage.png media/hp8970.svg media/specialPage.png media/optionsPage.png media/sourcePage.png media/notesPage.png media/mainPage.png

